--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,8 @@
     "dev": "father dev",
     "build": "father build",
     "build:deps": "father prebundle",
-    "prepublishOnly": "father doctor && npm run build"
+    "prepublishOnly": "father doctor && npm run build",
+    "codingPublish": "npm publish --registry=https://moensun-npm.pkg.coding.net/npm/moensun/"
   },
   "keywords": [],
   "authors": [
@@ -34,5 +35,5 @@
     "@formily/reactive": "^2.2.29",
     "@juggle/resize-observer": "^3.4.0"
   },
-  "gitHead": "5ad2f5310aebd63a4fbcbec8d719422ff200af90"
+  "gitHead": "690a5cf13f852f3c3f639534d228e71678d6d532"
 }
