--- a/packages/flow/package.json
+++ b/packages/flow/package.json
@@ -9,7 +9,8 @@
     "dev": "father dev",
     "build": "father build",
     "build:deps": "father prebundle",
-    "prepublishOnly": "father doctor && npm run build"
+    "prepublishOnly": "father doctor && npm run build",
+    "codingPublish": "npm publish --registry=https://moensun-npm.pkg.coding.net/npm/moensun/"
   },
   "keywords": [],
   "authors": [
@@ -49,5 +50,5 @@
     "react-dom": "^18.2.0",
     "requestidlecallback": "^0.3.0"
   },
-  "gitHead": "5ad2f5310aebd63a4fbcbec8d719422ff200af90"
+  "gitHead": "690a5cf13f852f3c3f639534d228e71678d6d532"
 }
